[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coverwise"
version = "1.0.0"
description = "AI-powered health insurance advisor using Google ADK and multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.1,<1.0.0",
    "uvicorn>=0.34.0",
    "google-cloud-aiplatform>=1.132.0",
    "google-adk>=1.0.0",
    "Deprecated>=1.2.0",
    "requests>=2.32.4",
    "python-dotenv==1.0.1",
    "mem0ai==0.1.29",
    "chromadb==0.5.3",
    "pydantic==2.9.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
